--- a/index.html
+++ b/index.html
@@ -6,33 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
     content="eCommerce de Cosmetologia en Puerto Rico, Misiones. Aqui encontraras ofertas, trabajos y contacto.">
-    <meta name="keywords" content="peluqueria, salon, puerto rico, whatsapp, salon, beautifly">
+    <meta name="keywords" content="ecommerce, puerto rico, whatsapp, cosmetologia, tienda">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
     <title>eCommerce Cosmetologia</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">[LOGO]</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Tienda</a>
-                  <a class="nav-link" href="#">Contacto</a>
-                  <a class="nav-link" href="#">Nosotros</a>
-                </div>
+  <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">[LOGO]</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#">Tienda</a>
+                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#">Nosotros</a>
               </div>
-              <button type="button" class="btn btn-primary"><img src="./assets/img/cart.svg" class="rounded float-end"></button>
-            </div>
-          </nav>
-        <h1>Productos</h1>
-    </header>
-    <script src="./js/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+          </div>
+          <div><!--Boton Carrito-->
+            <button type="button" id="open" class="btn btn-primary"><img src="./assets/img/cart.svg" class="rounded float-end"><span id="contador-carrito">0</span></button>
+          </div>
+    </nav>
+  </header>
+  <h1>Productos</h1>
+  <main id="producto-contenedor"><!--Modal-->
+    <div class="modal-container" id="modal_container">
+        <div class="modal-carrito">
+          <h3>Carrito</h3>
+          <button type="button" id="cerrar" class="btn btn-light">Cerrar</button>
+          <div id="carrito-contenedor"></div>
+        </div>
+    </div>
+  </main>
+  <script src="./js/stock.js"></script>
+  <script src="./js/carritoIndex.js"></script>
+  <script src="./js/modal.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
