--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
                 <a class="nav-link" href="#">Contacto</a>
                 <a class="nav-link" href="#">Nosotros</a>
               </div>
-          </div>
-          <div><!--Boton Carrito-->
-            <button type="button" id="open" class="btn btn-primary"><img src="./assets/img/cart.svg" class="rounded float-end"><span id="contador-carrito">0</span></button>
+            <button type="button" id="boton-carrito" class="btn btn-primary"><img src="./assets/img/cart.svg" class="rounded float-end"><span id="contadorCarrito">0</span></button>
           </div>
     </nav>
   </header>
   <h1>Productos</h1>
-  <main id="producto-contenedor"><!--Modal-->
-    <div class="modal-container" id="modal_container">
-        <div class="modal-carrito">
-          <h3>Carrito</h3>
-          <button type="button" id="cerrar" class="btn btn-light">Cerrar</button>
-          <div id="carrito-contenedor"></div>
-        </div>
-    </div>
+  <main id="contenedor-productos">
   </main>
+  <div class="modal-contenedor">
+    <div class="modal-carrito">
+      <h3>Carrito</h3>
+      <div id="carrito-contenedor">
+      </div>
+      <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
+      <button type="button" id="carritoCerrar" class="btn btn-primary">Cerrar</button>
+      <button type="button" id="vaciar-carrito" class="btn btn-primary">Vaciar carrito</button>
+    </div>
+  </div>
   <script src="./js/stock.js"></script>
-  <script src="./js/carritoIndex.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
