--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
     <title>eCommerce Cosmetologia</title>
 </head>
 <body>
@@ -41,11 +42,13 @@
       <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
       <button type="button" id="carritoCerrar" class="btn btn-primary">Cerrar</button>
       <button type="button" id="vaciar-carrito" class="btn btn-primary">Vaciar carrito</button>
+      <img src="./assets/img/whatsapp.svg" id="whatsapp" href="https://wa.me/1XXXXXXXXXX"></button>
     </div>
   </div>
   <script src="./js/stock.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/app.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
