--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
     content="eCommerce de Cosmetologia en Puerto Rico, Misiones. Aqui encontraras ofertas, trabajos y contacto.">
-    <meta name="keywords" content="ecommerce, puerto rico, whatsapp, cosmetologia, tienda">
-    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
-    <title>eCommerce Cosmetologia</title>
+  <meta name="keywords" content="ecommerce, puerto rico, whatsapp, cosmetologia, tienda">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+  <title>CosmetCenter</title>
 </head>
+
 <body>
   <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">[LOGO]</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Tienda</a>
-                <a class="nav-link" href="#">Contacto</a>
-                <a class="nav-link" href="#">Nosotros</a>
-              </div>
-            <button type="button" id="boton-carrito" class="btn btn-primary"><img src="./assets/img/cart.svg" class="rounded float-end"><span id="contadorCarrito">0</span></button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">CosmetCenter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Tienda</a>
+            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">Nosotros</a>
           </div>
+        </div>
+        <button type="button" id="boton-carrito" class="btn btn-primary"><img src="./assets/img/cart.svg"
+            class="rounded float-end"><span id="contadorCarrito">0</span></button>
     </nav>
   </header>
   <h1>Productos</h1>
@@ -42,13 +47,17 @@
       <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
       <button type="button" id="carritoCerrar" class="btn btn-primary">Cerrar</button>
       <button type="button" id="vaciar-carrito" class="btn btn-primary">Vaciar carrito</button>
-      <img src="./assets/img/whatsapp.svg" id="whatsapp" href="https://wa.me/1XXXXXXXXXX"></button>
+      <img src="./assets/img/whatsapp.svg" id="whatsapp"></button>
     </div>
   </div>
-  <script src="./js/stock.js"></script>
+  <script src="./js/cargarStock.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/app.js"></script>
+  <script src="./js/whatsapp.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
